--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
             </p>
         </div>
         <div class="image">
-            <img src="/For Wareng And Seireng/Kei Tongba.png">
+            <img src="Kei Tongba.png">
         </div>
         <div class="firstfour">
             <p>
@@ -310,7 +310,7 @@
     <center>
         <div class="seireng" id="pun">
         <h1>puN</h1>
-        <img src="/For Wareng And Seireng/Pun.png">
+        <img src="Pun.png">
                 <div>
                     ha puN kqnaNbi!<br>
                     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;lEbaQ puNdi kqnaNbi!<br>
@@ -327,7 +327,7 @@
         <hr width="50%" align="center" color="gray" size="3px"><br>
         <div class="seireng" id="Sangai">
             <h1>sZaI</h1>
-            <img src="/For Wareng And Seireng/Sangai.png">
+            <img src="Sangai.png">
                     <div>
                         sZaI! sZaI! sZaI Ao!<br>
                         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;sZaI kObi ciroHbi!<br>
