--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
             </p>
         </div>
         <div class="Lamhui">
-            <img src="/For Wareng And Seireng/Kei Lamhui.png">
+            <img src="Kei Lamhui.png">
         </div>
         <div class="firstfour">
             <p>
