--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
             </p>
         </div>
         <div class="image">
-            <img src="Kei Tongba.png">
+            <img src="Tongba.png">
         </div>
         <div class="firstfour">
             <p>
@@ -242,7 +242,7 @@
             </p>
         </div>
         <div class="Lamhui">
-            <img src="Kei Lamhui.png">
+            <img src="Lamhui.png">
         </div>
         <div class="firstfour">
             <p>
