--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
             </p>
         </div>
         <div class="image">
-            <img src="Tongba.png">
+            <img src="Kei Tongba.png">
         </div>
         <div class="firstfour">
             <p>
@@ -241,7 +241,7 @@
                 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;lMhuI - ATOb , IfiH fiHn ceLlQlibsibu krigino ?
             </p>
         </div>
-        <div class="Lamhui">
+        <div class="Kei Lamhui">
             <img src="Lamhui.png">
         </div>
         <div class="firstfour">
