--- a/index.html
+++ b/index.html
@@ -241,8 +241,8 @@
                 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;lMhuI - ATOb , IfiH fiHn ceLlQlibsibu krigino ?
             </p>
         </div>
-        <div class="Kei Lamhui">
-            <img src="Lamhui.png">
+        <div class="Lamhui">
+            <img src="Kei Lamhui.png">
         </div>
         <div class="firstfour">
             <p>
