--- a/index.html
+++ b/index.html
@@ -12,6 +12,13 @@
         font-family: 'EeyekAkaba';
         font-size: 28px;
       }
+     .navbar {
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        gap: 20px;
+        margin-bottom: 20px;
+      }
       .navbar select {
         margin: 10px;
         padding: 5px 10px;
