--- a/index.html
+++ b/index.html
@@ -20,11 +20,16 @@
         margin-bottom: 20px;
       }
       .navbar select {
-        margin: 10px;
-        padding: 5px 10px;
-        background-color: rgb(22, 170, 22);
-        border-radius: 6px;
-        border: 1px solid #ccc;
+  width: 200px;
+  font-family: 'EeyekAkaba';
+  font-size: 28px;
+  margin: 10px;
+  padding: 5px 10px;
+  background-color: rgb(22, 170, 22);
+  border-radius: 6px;
+  border: 1px solid #ccc;
+}
+
       }      
     body {
       display: flex;
