--- a/index.html
+++ b/index.html
@@ -12,24 +12,20 @@
         font-family: 'EeyekAkaba';
         font-size: 28px;
       }
-     .navbar {
-        width: 100%;
-        display: flex;
-        justify-content: center;
-        gap: 20px;
-        margin-bottom: 20px;
-      }
-      .navbar select {
-  width: 200px;
-  font-family: 'EeyekAkaba';
-  font-size: 28px;
-  margin: 10px;
-  padding: 5px 10px;
-  background-color: rgb(22, 170, 22);
-  border-radius: 6px;
-  border: 1px solid #ccc;
+      .navbar {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+  margin-bottom: 20px;
 }
 
+      .navbar select {
+        margin: 10px;
+        padding: 5px 10px;
+        background-color: rgb(22, 170, 22);
+        border-radius: 6px;
+        border: 1px solid #ccc;
       }      
     body {
       display: flex;
@@ -219,7 +215,7 @@
             </p>
         </div>
         <div class="image">
-            <img src="Kei Tongba.png">
+            <img src="/For Wareng And Seireng/Kei Tongba.png">
         </div>
         <div class="firstfour">
             <p>
@@ -254,7 +250,7 @@
             </p>
         </div>
         <div class="Lamhui">
-            <img src="Kei Lamhui.png">
+            <img src="/For Wareng And Seireng/Kei Lamhui.png">
         </div>
         <div class="firstfour">
             <p>
@@ -322,7 +318,7 @@
     <center>
         <div class="seireng" id="pun">
         <h1>puN</h1>
-        <img src="Pun.png">
+        <img src="/For Wareng And Seireng/Pun.png">
                 <div>
                     ha puN kqnaNbi!<br>
                     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;lEbaQ puNdi kqnaNbi!<br>
@@ -339,7 +335,7 @@
         <hr width="50%" align="center" color="gray" size="3px"><br>
         <div class="seireng" id="Sangai">
             <h1>sZaI</h1>
-            <img src="Sangai.png">
+            <img src="/For Wareng And Seireng/Sangai.png">
                     <div>
                         sZaI! sZaI! sZaI Ao!<br>
                         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;sZaI kObi ciroHbi!<br>
