--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
             </p>
         </div>
         <div class="Lamhui">
-            <img src=Kei Lamhui.png">
+            <img src="Kei Lamhui.png">
         </div>
         <div class="firstfour">
             <p>
